Fix question change animation would sometimes flicker at end

--- a/sass/views/_main.scss
+++ b/sass/views/_main.scss
@@ -89,13 +89,18 @@
         transition: border-color 0.5s ease-in-out;
         &.hovered { border-color: red; }
 
-        .part {
+        .parts {
             width: 100%;
-            transition: opacity 2s ease-in-out;
-            &.part-enter { height: 0; opacity: 0; }
-            &.part-enter-active { opacity: 1; }
-            &.part-leave { opacity: 1; }
-            &.part-leave-active { opacity: 0; }
+            height: 76px;
+            .part {
+                width: 100%;
+                height: 0;
+                transition: opacity 2s ease-in-out;
+                &.part-enter { opacity: 0; }
+                &.part-enter-active { opacity: 1; }
+                &.part-leave { opacity: 1; }
+                &.part-leave-active { opacity: 0; }
+            }
         }
 
         .questionmark {
